apps/staging/sample-java/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-webapp
  namespace: sample-java
  labels:
    app: web-app
spec:
  replicas: 2
