apps/staging/sample-java/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-weabapp-ingress
  namespace: sample-java
spec:
  ingressClassName: nginx
  rules:
  - host: sample-java-webapp-jenkins.example.com
    http:
      paths:
      - backend:
          service:
            name: webapp-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
